--- a/infinidock/Makefile
+++ b/infinidock/Makefile
@@ -1,15 +1,15 @@
 # Copyright (c) 2010-2014, Xuzz Productions, LLC
 # All rights reserved.
-# 
+#
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
-# 
+#
 # 1. Redistributions of source code must retain the above copyright notice, this
 #    list of conditions and the following disclaimer.
 # 2. Redistributions in binary form must reproduce the above copyright notice,
 #    this list of conditions and the following disclaimer in the documentation
 #    and/or other materials provided with the distribution.
-# 
+#
 # THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 # ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 # WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
@@ -21,14 +21,14 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 # SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-export GO_EASY_ON_ME=1
+#export GO_EASY_ON_ME=1
 
-export TARGET_CXX = xcrun -sdk iphoneos clang++
-export TARGET_LD = xcrun -sdk iphoneos clang++
-export TARGET = iphone:latest:5.0
+#export TARGET_CXX = xcrun -sdk iphoneos clang++
+#export TARGET_LD = xcrun -sdk iphoneos clang++
+#export TARGET = iphone:latest:5.0
 export ARCHS = armv7 armv7s arm64
 
-include theos/makefiles/common.mk
+include $(THEOS)/makefiles/common.mk
 
 TWEAK_NAME = Infinidock
 Infinidock_FILES = Infinidock.xmi
@@ -36,3 +36,5 @@ Infinidock_FRAMEWORKS = UIKit CoreGraphics QuartzCore CoreTelephony
 
 include $(THEOS_MAKE_PATH)/tweak.mk
 
+after-install::
+	install.exec "killall -9 SpringBoard"
