--- a/infinidock/layout/DEBIAN/control
+++ b/infinidock/layout/DEBIAN/control
@@ -1,19 +1,15 @@
-Author: chpwn <support@chpwn.com>
-Maintainer: BigBoss <bigboss@thebigboss.org>
-Name: Infinidock
-Package: com.chpwn.infinidock
+Author: subdiox <subdiox@gmail.com>
+Maintainer: subdiox <subdiox@gmail.com>
+Name: Infinidock (iOS 10)
+Package: com.subdiox.infinidock
 Section: Tweaks
 Pre-Depends: firmware (>= 5.0)
 Depends: mobilesubstrate, preferenceloader (>= 1.1), com.chpwn.iconsupport
-Conflicts: com.saurik.iphone.fid, com.weiphone.setwallpaper3, com.macciti.6icondock, com.imario.supremepreferencesthree, com.thecyberduck.springboardenhancer
-Replaces: com.saurik.iphone.fid, com.weiphone.setwallpaper3, com.macciti.6icondock, com.imario.supremepreferencesthree, com.thecyberduck.springboardenhancer
-Provides: com.saurik.iphone.fid, com.macciti.6icondock
-Version: 2.1.2
+Breaks: com.saurik.iphone.fid, com.weiphone.setwallpaper3, com.macciti.6icondock, com.imario.supremepreferencesthree, com.thecyberduck.springboardenhancer
+Version: 1.0.0
 Architecture: iphoneos-arm
-Description: Scroll your dock with infinite icons!
-Depiction: http://chpwn.com/cydia/infinidock.html
-Homepage: http://chpwn.com/cydia/infinidock.html
+Description: Scroll your dock with infinite icons! (Forked from GitHub of Infiniapps)
+Depiction: http://subdiox.com/infiniapps.html
+Homepage: http://subdiox.com/infiniapps.html
 Icon: file:///Library/PreferenceLoader/Preferences/Infinidock.png
-Sponsor: thebigboss.org <http://thebigboss.org>
-Tag: cydia::commercial, purpose::extension
-dev: chpwn
+Tag: purpose::extension
